// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`event.filter should drop undefined values: evenNum event graph 1`] = `
"Graph {
  Seq [
    1. emit {{
       fullName: number →? *
    }}
  ]
  Next [
    *  Graph {
       Seq [
         1. compute {{}},
         2. run {{}}
       ]
      [(empty list)]}
  ]}"
`;

exports[`event.filter should drop undefined values: num event graph 1`] = `
"Graph {
  Seq [
    1. emit {{
       fullName: number
    }}
  ]
  Next [
    *  Graph {
       Seq [
         1. compute {{}},
         2. filter {{}},
         3. compute {{}}
       ]
       Next [
         *  Graph {
            Seq [
              1. emit {{
                 fullName: number →? *
              }}
            ]
            Next [
              *  Graph {
                 Seq [
                   1. compute {{}},
                   2. run {{}}
                 ]
                [(empty list)]}
           ]}
      ]}
  ]}"
`;
